Feat: change functions for login and register user

--- a/templates/register.html
+++ b/templates/register.html
@@ -7,15 +7,17 @@
 <body>
     <h3>Register</h3>
 
-    <form method="POST" action="/account/register">
-        <label>First Name:</label><br>
-        <input type="text" name="firstname"><br>
-        <label>Last Name:</label><br>
-        <input type="text" name="lastname"><br>
+    <form method="POST" action="/register">
+        <label>Name:</label><br>
+        <input type="text" name="name"><br>
+        <label>Nick:</label><br>
+        <input type="text" name="nick"><br>
         <label>Email:</label><br>
         <input type="text" name="email"><br>
         <label>Password:</label><br>
         <input type="text" name="password"><br>
+        <label>Confirm Password:</label><br>
+        <input type="text" name="confirmPassword"><br>
         <input type="submit" value="Register">
     </form>
 </body>
