--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 <body>
     <h3>Login</h3>
 
-    <form method="POST" action="/account/login">
+    <form method="POST" action="/login">
         <label>Email:</label><br>
         <input type="text" name="email"><br>
         <label>Password:</label><br>
